# Outrider

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.ps1  test_ridb.json
backend/: .env.example  Cargo.toml  Dockerfile  package.json
backend/data/: campgrounds.json
backend/src/: embedding.rs  index.ts  main.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: ResultCard.tsx  SearchBar.tsx  SearchResults.tsx
frontend/src/components/Filters/: Filters.css  Filters.tsx
frontend/src/components/MapPicker/: MapPicker.css  MapPicker.tsx
frontend/src/components/ResultCard/: ResultCard.css  ResultCard.tsx
frontend/src/components/SearchBar/: SearchBar.css  SearchBar.tsx
frontend/src/components/SearchResults/: SearchResults.css  SearchResults.tsx
frontend/src/lib/: geocode.ts
