[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
pgvector = { version = "0.4", features = ["sqlx"] }
regex = "1"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
ndarray = "0.16"
